@@ -1,3 +1,7 @@
+2012-02-18: sabae-landscape.py
+
+	* 鯖江市の百景の XML データを CSV に変換する。
+
 2012-01-21: wikipedia-data-config.xml wikipedia-schema.xml wikipedia-solrconfig.xml
 
 	* Wikipedia のデータを Solr にインポートする設定ファイル。
